Add `UTF-8` character encoding to all S3 responses